# nativeshell_ng

./: .gitignore  .gitmodules  0001-Fix-panic-in-finalizer.patch  0002-Make-clippy-happy.patch  Cargo.toml  melos.yaml
.github/workflows/: check_and_lint.yml
core/dart/: pubspec.yaml
core/dart/lib/: nativeshell_core.dart
core/dart/test/: core_test.dart
core/rust/: Cargo.toml
core/rust/src/: context.rs  finalizable_handle.rs  lib.rs  run_loop.rs  value.rs
core/rust/src/ffi/: functions.rs
core/rust/src/message_channel/: async_method_handler.rs  codec.rs  event_channel.rs  message_channel.rs  message_channel_common.rs  method_handler.rs  mock_message_channel.rs  mod.rs
core/rust/src/platform/android/: run_loop.rs  sys.rs
core/rust/src/platform/darwin/: main_thread_hack.rs  mod.rs  run_loop.rs  sys.rs  value.rs
core/rust/src/platform/linux/: run_loop.rs  sys.rs
core/rust/src/platform/win32/: adapter.rs  run_loop.rs  sys.rs
core/rust/src/util/: black_box.rs  capsule.rs  cell.rs  mod.rs
core/rust_derive/: Cargo.toml
core/rust_derive/src/: attributes.rs
engine_context/dart/: README.md  pubspec.yaml
engine_context/dart/android/: build.gradle  settings.gradle
engine_context/dart/ios/: flutter_engine_context.podspec
engine_context/dart/lib/: flutter_engine_context.dart
engine_context/dart/linux/: CMakeLists.txt  flutter_engine_context_plugin.cc
engine_context/dart/macos/: flutter_engine_context.podspec
engine_context/dart/windows/: CMakeLists.txt  flutter_engine_context_plugin.cpp  (+2 more)
engine_context/rust/: Cargo.toml
jni_context/: Cargo.toml
(+21 files in other folders)
