[package]
name = "nativeshell_core"
version = "0.1.3"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2021"
description = "NativeShell Core Rust package"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.17", default-features = false, features = ["std"] }
async-trait = "0.1.51"
once_cell = "1.8.0"
nativeshell_derive = { version = "0.1.1", path = "../rust_derive", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"
objc = "0.2.7"

[features]
derive = ["nativeshell_derive"]
# Allows mocking MessageChannel in unit tests
mock = []
